<resources>
    <string name="app_name">LightsyChat</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="welcome">Welcome to the Lightsy Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="default_status">Hi there, I am using LightsyChat</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="user_default_status">User Default Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
</resources>
