<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimaryDark">

    <include
        android:id="@+id/settings_appBar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_below="@+id/settings_appBar"
        android:id="@+id/settings_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:src="@drawable/default_user" />

    <TextView
        android:id="@+id/settings_displayname"
        android:layout_below="@+id/settings_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/display_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_displayname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:text="@string/default_status" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_above="@+id/settings_status_btn"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:backgroundTint="@color/colorOrange"
        android:textColor="@color/colorWhite"
        android:text="@string/change_status" />

</RelativeLayout>